Skip to content

Cannot open TTML subtitle files in their native file extensions


Abstract: The ability to use DFXP/TTML files is a new feature in the upcoming version of VLC (3.0.0-git). DFXP/TTML files are XML files that contain subtitle information. The most commonly used file extensions for these are .dfxp, .ttml, and .xml.


Problem: VLC will not use TTML subtitle files that have the .dfxp, .ttml, or .xml file extension. Such files are grayed out when attempting to use one.


How to reproduce problem:

  1. Open a video file in VLC.
  2. At the top menubar, click "Subtitles", and "Add Subtitle File..."
  3. Navigate to any .dfxp, .ttml, or .xml file. Notice that such files are grayed out and cannot be selected.

Temporary workaround: Renaming a TTML file to a .txt file extension will make the file selectable. VLC will then use the TTML file correctly.


Expected behavior: VLC should be able to use a DFXP/TTML file in any of its native file extensions (.dfxp, .ttml, or .xml).

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information