Add .ttml and .dfxp extensions for subtitles

Close #15726